--- a/src/Microsoft.Ajax.Utilities/Microsoft.Ajax.Utilities.csproj
+++ b/src/Microsoft.Ajax.Utilities/Microsoft.Ajax.Utilities.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard1.3</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
+      <PackageReference Include="System.ComponentModel.Primitives" Version="4.3.0" />
     </ItemGroup>
 </Project>
