--- a/src/SourceMapToolkit.CallstackDeminifier/SourceMapToolkit.CallstackDeminifier.csproj
+++ b/src/SourceMapToolkit.CallstackDeminifier/SourceMapToolkit.CallstackDeminifier.csproj
@@ -1,10 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        
+        <TargetFramework>netstandard2.0</TargetFramework>
         <Copyright>2016</Copyright>
         <PackageProjectUrl>https://github.com/microsoft/sourcemap-toolkit</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/microsoft/sourcemap-toolkit/blob/master/LICENSE.txt</PackageLicenseUrl>
-        <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
+        
     </PropertyGroup>
 
     <ItemGroup>
